@@ -72,6 +72,11 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "aMuleWeb", "aMuleWeb\aMuleW
 		{F8C2C7F5-CBF1-46C1-81C9-22AD406B52C6} = {F8C2C7F5-CBF1-46C1-81C9-22AD406B52C6}
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "wxCas", "wxCas\wxCas.vcproj", "{5FCAFC30-922E-446F-8DF5-D71819AB6356}"
+	ProjectSection(ProjectDependencies) = postProject
+		{F8C2C7F5-CBF1-46C1-81C9-22AD406B52C6} = {F8C2C7F5-CBF1-46C1-81C9-22AD406B52C6}
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Win32 = Debug|Win32
@@ -192,6 +197,14 @@ Global
 		{EC3DE6B0-0C01-4D64-928A-4ADDB09473BA}.Release|Win32.Build.0 = Release|Win32
 		{EC3DE6B0-0C01-4D64-928A-4ADDB09473BA}.Release29|Win32.ActiveCfg = Release29|Win32
 		{EC3DE6B0-0C01-4D64-928A-4ADDB09473BA}.Release29|Win32.Build.0 = Release29|Win32
+		{5FCAFC30-922E-446F-8DF5-D71819AB6356}.Debug|Win32.ActiveCfg = Debug|Win32
+		{5FCAFC30-922E-446F-8DF5-D71819AB6356}.Debug|Win32.Build.0 = Debug|Win32
+		{5FCAFC30-922E-446F-8DF5-D71819AB6356}.Debug29|Win32.ActiveCfg = Debug29|Win32
+		{5FCAFC30-922E-446F-8DF5-D71819AB6356}.Debug29|Win32.Build.0 = Debug29|Win32
+		{5FCAFC30-922E-446F-8DF5-D71819AB6356}.Release|Win32.ActiveCfg = Release|Win32
+		{5FCAFC30-922E-446F-8DF5-D71819AB6356}.Release|Win32.Build.0 = Release|Win32
+		{5FCAFC30-922E-446F-8DF5-D71819AB6356}.Release29|Win32.ActiveCfg = Release29|Win32
+		{5FCAFC30-922E-446F-8DF5-D71819AB6356}.Release29|Win32.Build.0 = Release29|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
